--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -65,7 +65,7 @@
 
 
                         </style>
-                        <div t-if="o.state == 'pending'" style="background-image: url(https://www.thinkoutsidetheslide.com/wp-content/uploads/2019/10/DRAFT-background.png);position: fixed;min-height: 100%;min-width: 100%;z-index: -1;opacity: 0.5;top: 0;left: 0;background-repeat: no-repeat;background-size: cover;"></div>
+                        <div t-if="o.state == 'pending'" style="background-image: url(https://www.thinkoutsidetheslide.com/wp-content/uploads/2019/10/DRAFT-background.png);position: absolute;min-height: 100%;min-width: 100%;z-index: -1;opacity: 0.5;top: 0;left: 0;background-repeat: no-repeat;background-size: cover;"></div>
                         <div class="header" style="height: 100px !important;">
                             <img class="img"  style="width: 100%;" src="/smart_travel_agency/static/img/3.jpg"/>
                             <h4 style="color: #073e89; text-align:center;">Travel Assistance Services (TAS)</h4>
