--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -71,7 +71,7 @@
                             <h4 style="color: #073e89; text-align:center;">Travel Assistance Services (TAS)</h4>
                         </div>
                         <div class="page" style="unicode-bidi: bidi-override !important; direction: unset !important;">
-                            <div style="background-image:url('/smart_travel_agency/static/img/DRAFT-background.png');position: fixed;min-height: 100%;min-width: 100%;z-index: -1;opacity: 0.5;top: 0;left: 0;background-repeat: no-repeat;background-size: cover;">tets</div>
+                            <div style="background-image:url(/smart_travel_agency/static/img/DRAFT-background.png);position: fixed;min-height: 100%;min-width: 100%;opacity: 0.5;top: 0;left: 0;background-repeat: no-repeat;background-size: cover;">tets</div>
                             <div  style="padding-left: 25px !important; padding-right: 25px !important; padding-top:1px !important;">
                                 <div  style="width: 50% !important; float:left !important; padding-right:10px;">
                                     <table class="table table-hover">
