--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -71,9 +71,9 @@
                             <h4 style="color: #073e89; text-align:center;">Travel Assistance Services (TAS)</h4>
                         </div>
                         <div class="page" style="unicode-bidi: bidi-override !important; direction: unset !important;">
-                            <div class="watermark_logo" style="position: fixed;opacity:0.1;front-size:8em;width:100%;text-align:center;z-index:100;height: 100%;">
-                                dsfgdhfjkghqEWRAETRSYTKULOI
-                                <img src="https://www.thinkoutsidetheslide.com/wp-content/uploads/2019/10/DRAFT-background.png" alt="Logo" style="height: 100%;width: 100%;"/>
+                            <div class="watermark_logo" style="position: fixed;opacity:1;front-size:8em;width:100%;text-align:center;z-index:100;height: 100%;">
+                                dsfgdhfjkghqEWRAETRSYTKULOI jkjkjkjkdsfgdhfjkghqEWRAETRSYTKULOI jkjkjkjkdsfgdhfjkghqEWRAETRSYTKULOI jkjkjkjkdsfgdhfjkghqEWRAETRSYTKULOI jkjkjkjkdsfgdhfjkghqEWRAETRSYTKULOI jkjkjkjkdsfgdhfjkghqEWRAETRSYTKULOI jkjkjkjkdsfgdhfjkghqEWRAETRSYTKULOI jkjkjkjkdsfgdhfjkghqEWRAETRSYTKULOI jkjkjkjkdsfgdhfjkghqEWRAETRSYTKULOI jkjkjkjk
+                                <img src="/smart_travel_agency/static/img/3.jpg" alt="Logo" style="height: 100%;width: 100%;"/>
                             </div>
                             <div  style="padding-left: 25px !important; padding-right: 25px !important; padding-top:1px !important;">
                                 <div  style="width: 50% !important; float:left !important; padding-right:10px;">
