--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -164,7 +164,7 @@
                                     </table>
                                 </div>
                                 <div style="width: 35% !important; float:right !important; margin-top:-8px !important;">
-                                    <table class="table table-hover">
+                                    <table class="table table-hover" style="background-image:url('/smart_travel_agency/static/img/3.jpg')">
                                         <tr>
                                             <th style="width:32% !important;" scope="col">Coverage Zone</th>
                                             <td><span t-field="o.geographical_coverage" /></td>
