--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -75,7 +75,7 @@
     position: fixed;
     font-size: 15rem;
     left: 0;
-    margin-top: 22%;
+    margin-top: 40%;
     text-transform: uppercase;
     z-index: 50;
     transform: rotateZ(45deg);
@@ -100,7 +100,7 @@
     width: 100%;
     vertical-align: middle;
     padding: auto;
-    ">DRAFT</h1>
+    ">draft</h1>
     </div>
                             <div  style="padding-left: 25px !important; padding-right: 25px !important; padding-top:1px !important;">
                                 <div  style="width: 50% !important; float:left !important; padding-right:10px;">
