--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -75,9 +75,10 @@
     position: fixed;
     font-size: 15rem;
     left: 0;
+    top:0;
     margin-top: 40%;
     text-transform: uppercase;
-    z-index: 50;
+    z-index: 9999;
     -webkit-transform: rotateZ(45deg);
      -moz-transform: rotateZ(45deg);
     -ms-transform: rotateZ(45deg);
@@ -92,13 +93,11 @@
     "><h1 style="
     position: fixed;
     font-size: 15rem;
-    left: 0;
     text-transform: uppercase;
-    z-index: 50;
+    z-index: 9999;
     color: gray;
-    opacity: 0.5;
     vertical-align: middle;
-   
+
     ">draft</h1>
     </div>
                             <div  style="padding-left: 25px !important; padding-right: 25px !important; padding-top:1px !important;">
