--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -161,7 +161,7 @@
                                      <div style="
     position: absolute;
     font-size: 15rem;
-    left: 0;
+    left: 10%;
     top:20%;
 
     text-transform: uppercase;
@@ -178,7 +178,6 @@
     text-align: center;
     vertical-align: middle;
     "><h1 style="
-    position: fixed;
     font-size: 15rem;
     text-transform: uppercase;
     z-index: 9999;
