--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -391,9 +391,9 @@
 
                                                 <tr>
 <!--                                                    <t t-if="o.package == 'individual'">-->
-                                                    <td style="font-size: 12px !important; height:20px !important;"></td>
-                                                    <td style="font-size: 12px !important;height:20px !important;"></td>
-                                                    <td style="font-size: 12px !important;height:20px !important;"></td>
+                                                    <td style="font-size: 12px !important; height:20px !important;"><t t-esc="o.broker" /></td>
+                                                    <td style="font-size: 12px !important;height:20px !important;"><t t-esc="o.broker.fra_no" /></td>
+                                                    <td style="font-size: 12px !important;height:20px !important;"><t t-esc="o.broker_commission" /></td>
 <!--                                                    </t>-->
 <!--                                                    <t t-if="o.package == 'family'">-->
 <!--                                                        <td style="font-size: 9px !important;"><t t-esc="ben.cover" /></td>-->
