--- a/views/travel_policy.xml
+++ b/views/travel_policy.xml
@@ -58,7 +58,7 @@
                 <header>
 
                     <field name="state" widget="statusbar" statusbar_visible="pending,approved"/>
-                    <button name="confirm_policy" string="approved" type="object"
+                    <button name="confirm_policy" string="approved" type="object" groups="smart_travel_agency.all_agencies_group,smart_travel_agency.head_office_group"
                             class="oe_highlight"
                             attrs="{'invisible': ['|',('state', '=', 'approved'),('state', '=', 'canceled')]}"/>
                     <!--                    <button name="send_mail_template" string="send" type="object"-->
@@ -109,7 +109,7 @@
                         </group>
                         <group>
                             <field name="user_id" invisible="1"  force_save="1" />
-                            <field name="broker"  />
+                            <field name="broker" groups="smart_travel_agency.all_agencies_group,smart_travel_agency.head_office_group"  />
                             <field name="travel_agency" readonly="1" force_save="1" />
                             <field name="travel_agency_branch" invisible="1"  force_save="1"/>
                             <field name="DOB"  required="1" attrs="{'readonly': [('state', '=','approved')]}"/>
