--- a/views/menu_item.xml
+++ b/views/menu_item.xml
@@ -38,7 +38,7 @@
         <menuitem id="excess_menu" name="Excess" parent="configuration_view_menu2"
                   action="excess_action" sequence="1"/>
         <menuitem id="travel_menu_id" name="Travel "
-                   parent="arope-conf.conf_menu"/>
+                   parent="arope_conf.conf_menu"/>
         <menuitem id="price_menu" name="Price Table" parent="travel_menu_id"
                   action="price_action" sequence="2"/>
         <menuitem id="price_menu_family" name="Family Package" parent="travel_menu_id"
