--- a/views/priceTable.xml
+++ b/views/priceTable.xml
@@ -9,6 +9,7 @@
                 <sheet>
                     <group>
                         <group>
+                            <field name="product"/>
                             <field name="package"/>
                             <field name="zone"/>
                             <field name="currency_id"/>
@@ -35,6 +36,13 @@
                                 </tree>
                             </field>
                         </page>
+                        <page string="Covers">
+                            <field name="covers">
+                                <tree editable="bottom">
+                                    <field name="cover"/>
+                                </tree>
+                            </field>
+                        </page>
 
                     </notebook>
                 </sheet>
@@ -47,6 +55,7 @@
         <field name="model">travel.price</field>
         <field name="arch" type="xml">
             <tree>
+                <field name="product"/>
                 <field name="package"/>
                 <field name="zone"/>
                 <!--<field name="period"/>-->
