--- a/views/products.xml
+++ b/views/products.xml
@@ -2,7 +2,7 @@
     <record id="view_product_form_inherit" model="ir.ui.view">
             <field name="name"></field>
             <field name="model">insurance.product</field>
-            <field name="inherit_id" ref="insurance.product.form_product"/>
+            <field name="inherit_id" ref="arope_conf.form_product"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='product_name']" position="after">
                     <field name="ar_product_name"/>
