--- a/views/travel_policy.xml
+++ b/views/travel_policy.xml
@@ -6,6 +6,7 @@
         <field name="arch" type="xml">
             <tree decoration-warning="state == 'pending'" decoration-danger="state == 'canceled'"
                   string="Travel Policy"  default_order="issue_date desc">
+                <field name="product"/>
                 <field name="package"/>
                 <field name="policy_num"/>
                 <field name="serial_no"/>
@@ -90,6 +91,7 @@
                             <field name="passport_num" attrs="{'readonly': [('state', '=','approved')]}" required="1"/>
                         </group>
                         <group>
+                            <field name="product"/>
                             <field name="package" attrs="{'readonly': [('state', '=','approved')]}"/>
                             <field name="type"/>
                             <field name="issue_date" readonly="1" force_save="1"/>
