--- a/views/travel_policy.xml
+++ b/views/travel_policy.xml
@@ -111,7 +111,7 @@
                         </group>
                         <group>
                             <field name="user_id" invisible="1"  force_save="1" />
-<!--                            <field name="broker" groups="smart_travel_agency.all_agencies_group,smart_travel_agency.head_office_group"  />-->
+                            <field name="broker" groups="smart_travel_agency.all_agencies_group,smart_travel_agency.head_office_group"  />
                             <field name="travel_agency" readonly="1" force_save="1" />
                             <field name="travel_agency_branch" invisible="1"  force_save="1"/>
                             <field name="DOB"  required="1" attrs="{'readonly': [('state', '=','approved')]}"/>
