--- a/views/travel_policy.xml
+++ b/views/travel_policy.xml
@@ -143,20 +143,20 @@
 
                                 <group>
                                     <field name="currency_id"/>
-                                    <field name="net_premium"/>
-                                    <field name="gross_premium"/>
-                                    <field name="travel_agency_comm"/>
-                                    <field name="bonus_commission"/>
-                                    <field name="broker_commission"/>
-                                    <field name="net_to_insurer"/>
+                                    <field name="net_premium" readonly="1" force_save="1"/>
+                                    <field name="gross_premium" readonly="1" force_save="1"/>
+                                    <field name="travel_agency_comm" readonly="1" force_save="1"/>
+                                    <field name="bonus_commission" readonly="1" force_save="1"/>
+                                    <field name="broker_commission" readonly="1" force_save="1"/>
+                                    <field name="net_to_insurer" readonly="1" force_save="1"/>
 
                                 </group>
                                 <group>
-                                    <field name="supervisory_stamp"/>
-                                    <field name="issue_fees"/>
-                                    <field name="proportional_stamp"/>
-                                    <field name="dimensional_stamp"/>
-                                    <field name="admin_fees"/>
+                                    <field name="supervisory_stamp" readonly="1" force_save="1"/>
+                                    <field name="issue_fees" readonly="1" force_save="1"/>
+                                    <field name="proportional_stamp" readonly="1" force_save="1"/>
+                                    <field name="dimensional_stamp" readonly="1" force_save="1"/>
+                                    <field name="admin_fees" />
                                 </group>
                             </group>
                         </page>
