--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -66,8 +66,8 @@
 
                         </style>
 
-                        <div class="header" style="height: 100px !important;">
-                            <img class="img"  style="width: 100%;" src="https://online.aropeegypt.com.eg:8069/smart_travel_agency/static/img/1.png"/>
+                        <div class="header">
+                            <img class="img"  style="width: 100%;" src="https://online.aropeegypt.com.eg:8069/smart_travel_agency/static/img/3.jpg"/>
                             <h4 style="color: #073e89; text-align:center;">Travel Assistance Services (TAS)</h4>
                         </div>
 
