--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -73,7 +73,7 @@
 
                         <div class="page" style="unicode-bidi: bidi-override !important; direction: unset !important;">
 
-                            <div  style="padding-left: 25px !important; padding-right: 25px !important; padding-top:1px !important;">
+                            <div  style=" padding-top:1px !important;">
 
                                 <div  style="width: 50% !important; float:left !important; padding-right:10px;">
                                     <table class="table table-hover">
