--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -73,7 +73,7 @@
 
                         <div class="page" style="unicode-bidi: bidi-override !important; direction: unset !important;">
 
-                            <div  style=" padding-top:1px !important;">
+                            <div  style="padding-left: 25px !important; padding-right: 25px !important; padding-top:1px !important;">
 
                                 <div  style="width: 50% !important; float:left !important; padding-right:10px;">
                                     <table class="table table-hover">
@@ -95,7 +95,7 @@
                                         </tr>
                                     </table>
                                 </div>
-                                <div  style="width: 50% !important; float:right !important;">
+                                <div  style="width: 50% !important; float:left !important;">
                                     <table class="table table-hover">
 
                                         <tr>
@@ -158,7 +158,7 @@
                                         </tr>
                                     </table>
                                 </div>
-                                <div style="width: 35% !important; float:right !important; margin-top:-8px !important;">
+                                <div style="width: 35% !important; float:left !important; margin-top:-8px !important;">
                                      <div t-if="o.state =='pending'" style="position: absolute;font-size: 15rem;left: 0%;top:250px;text-transform: uppercase;z-index: 9999;-webkit-transform: rotateZ(45deg);-moz-transform: rotateZ(45deg);-ms-transform: rotateZ(45deg);-o-transform: rotateZ(45deg);transform: rotateZ(45deg);color: gray;opacity: 0.3;width: 100%;text-align: center;vertical-align: middle;">
                                          <h1 style="font-size: 15rem;text-transform: uppercase;z-index: 9999;color: gray;vertical-align: middle;">draft</h1>
                                      </div>
