--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -95,7 +95,7 @@
                                         </tr>
                                     </table>
                                 </div>
-                                <div  style="width: 50% !important; float:left !important;">
+                                <div  style="width: 45% !important; float:right !important;">
                                     <table class="table table-hover">
 
                                         <tr>
