--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -129,7 +129,7 @@
                                     </table>
 
                                 </div>
-                                <div style="width: 20.6% !important; float:left !important; padding-right:10px;">
+                                <div style="width: 20.6% !important; margin-top: 5px !important; float:left !important; padding-right:10px;">
                                     <table class="table table-hover">
 
                                         <tr>
@@ -138,7 +138,7 @@
                                         </tr>
                                     </table>
                                 </div>
-                                <div style="width: 20.6% !important; float:left !important; padding-right:10px; margin-top:-8px !important;">
+                                <div style="width: 20.6% !important; float:left !important; padding-right:10px; margin-top: 5px !important;">
                                     <table class="table table-hover">
 
                                         <tr>
@@ -150,7 +150,7 @@
                                         </tr>
                                     </table>
                                 </div>
-                                <div style="width: 20.6% !important; float:left !important; padding-right:10px; margin-top:-8px !important;">
+                                <div style="width: 20.6% !important; float:left !important; padding-right:10px; margin-top: 5px !important;">
                                     <table class="table table-hover">
                                         <tr>
                                             <th style="width:50% !important;" scope="col">Policy Period</th>
@@ -158,7 +158,7 @@
                                         </tr>
                                     </table>
                                 </div>
-                                <div style="width: 34% !important; float:right !important; margin-top:-8px !important;">
+                                <div style="width: 34% !important; float:right !important; margin-top: 5px !important;">
                                      <div t-if="o.state =='pending'" style="position: absolute;font-size: 15rem;left: 0%;top:250px;text-transform: uppercase;z-index: 9999;-webkit-transform: rotateZ(45deg);-moz-transform: rotateZ(45deg);-ms-transform: rotateZ(45deg);-o-transform: rotateZ(45deg);transform: rotateZ(45deg);color: gray;opacity: 0.3;width: 100%;text-align: center;vertical-align: middle;">
                                          <h1 style="font-size: 15rem;text-transform: uppercase;z-index: 9999;color: gray;vertical-align: middle;">draft</h1>
                                      </div>
@@ -182,7 +182,7 @@
                                 <!--                                            </tr>-->
 
                                 <t t-if="o.price_details ==False" >
-                                    <div style="width: 100% !important; float:right !important;">
+                                    <div style="width: 100% !important; float:right !important; margin-top: 5px !important;">
                                         <table class="table table-hover">
                                             <tr>
                                                 <th style=" color: #073e89; border: none !important;" scope="col">Gross Premium</th>
@@ -232,7 +232,7 @@
                                     </div>
                                 </t>
                                 <t t-if="o.price_details !=False" >
-                                    <div style="width: 100% !important;  float: left;">
+                                    <div style="width: 100% !important;  float: left; margin-top: 5px !important;">
                                         <table class="table table-hover">
                                             <thead>
                                                 <tr style="background-color: #eee;">
@@ -262,7 +262,7 @@
                                         </table>
                                     </div>
                                 </t>
-                                <div style="width: 100% !important;  float: left;">
+                                <div style="width: 100% !important;  float: left; margin-top: 5px !important;">
                                     <table class="table table-hover" style="border: double #073e89 !important;">
                                         <thead>
                                             <tr style="background-color: #eee;">
@@ -298,7 +298,7 @@
                                     </table>
 
                                 </div>
-                                <div class="" style="width: 100% !important; float: left;">
+                                <div class="" style="width: 100% !important; float: left; margin-top: 5px !important;">
                                     <table class="table table-hover">
                                         <thead>
                                             <tr>
@@ -345,7 +345,7 @@
                                 <!--                                                    </t>-->
                                 <!--                                                </tr>-->
                                 <!--                                            </t>-->
-                                <div style="width: 50% !important;  float: left; white-space: nowrap !important;">
+                                <div style="width: 50% !important; margin-top: -2px !important; float: left; white-space: nowrap !important;">
                                     <!--                                    <t t-if="o.package == 'individual'">-->
                                     <ul style="padding-left:15px;font-size: 11px;">
                                         <li>The above is subject to policy terms and conditions as attached.</li>
@@ -368,7 +368,7 @@
                                     <!--                                    <p style="font-size: 10px;"></p>-->
                                     <!--                                    <p style="font-size: 10px; margin-top:-10px !important;"></p>-->
                                 </div>
-                                <div style="width: 50% !important;  float: right; text-align:end;">
+                                <div style="width: 50% !important; margin-top: -2px !important; float: right; text-align:end;">
                                     <t t-if="o.source != 'Agency'">
                                         <t t-if="o.package == 'individual'">
                                             <p style="text-align:end; font-size: 10px;">Source : OLI</p>
@@ -446,7 +446,7 @@
                                 <!--                                        <h4 style="color: #073e89; width: 100% !important; margin-top:-8px !important; float: left; text-align:center !important;">Assistance Information</h4>-->
                                 <!--                                    </div>-->
                                 <!--                                </t>-->
-                                <div style="width: 100% !important; margin-top:0px !important; float: left; border: 1px solid #ddd !important;">
+                                <div style="width: 100% !important; margin-top:-4px !important; float: left; border: 1px solid #ddd !important;">
                                     <div style="width: 25% !important; float: left; border: none !important;">
 
                                         <table class="table table-hover" style="border: none !important;">
