--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -310,8 +310,8 @@
                                             <t t-foreach="o.get_benefits() " t-as="ben">
                                                 <tr t-if="ben.special_covers == False">
                                                     <!--                                                    <t t-if="o.package == 'individual'">-->
-                                                    <td style="font-size: 12px !important;"><t t-esc="ben.cover" /></td>
-                                                    <td style="font-size: 12px !important;"><t t-esc="ben.limit" /></td>
+                                                    <td style="font-size: 10px !important;"><t t-esc="ben.cover" /></td>
+                                                    <td style="font-size: 10px !important;"><t t-esc="ben.limit" /></td>
                                                     <!--                                                    </t>-->
                                                     <!--                                                    <t t-if="o.package == 'family'">-->
                                                     <!--                                                        <td style="font-size: 9px !important;"><t t-esc="ben.cover" /></td>-->
@@ -438,7 +438,7 @@
                                 <!--                                </div>-->
                                 <!--                                <t>-->
                                 <div style="margin-top:-4px !important;">
-                                    <h4 style="color: #073e89; width: 100% !important; margin-top:-4px !important; float: left; text-align:center !important;">Assistance Information</h4>
+                                    <h4 style="color: #073e89; width: 100% !important;  float: left; text-align:center !important;">Assistance Information</h4>
                                 </div>
                                 <!--                                </t>-->
                                 <!--                                <t t-if="o.package == 'family'">-->
@@ -446,7 +446,7 @@
                                 <!--                                        <h4 style="color: #073e89; width: 100% !important; margin-top:-8px !important; float: left; text-align:center !important;">Assistance Information</h4>-->
                                 <!--                                    </div>-->
                                 <!--                                </t>-->
-                                <div style="width: 100% !important; margin-top:-4px !important; float: left; border: 1px solid #ddd !important;">
+                                <div style="width: 100% !important; margin-bottom:4px !important; float: left; border: 1px solid #ddd !important;">
                                     <div style="width: 25% !important; float: left; border: none !important;">
 
                                         <table class="table table-hover" style="border: none !important;">
